# cgc-challenges

./: .clangd  .gitignore  README.md  convert.py  label.py  meson.build  meson_options.txt
challenges/: meson.build
challenges/3D_Image_Toolkit/: CMakeLists.txt  README.md  meson.build
challenges/AIS-Lite/: CMakeLists.txt  README.md  meson.build
challenges/ASCII_Content_Server/: CMakeLists.txt  README.md  meson.build
challenges/ASL6parse/: CMakeLists.txt  README.md  meson.build
challenges/A_Game_of_Chance/: CMakeLists.txt
challenges/Accel/: CMakeLists.txt  README.md  meson.build
challenges/Audio_Visualizer/: CMakeLists.txt  README.md  meson.build
challenges/Azurad/: CMakeLists.txt  README.md  meson.build
challenges/BIRC/: CMakeLists.txt
challenges/Barcoder/: CMakeLists.txt  README.md  meson.build
challenges/BitBlaster/: CMakeLists.txt  README.md  meson.build
challenges/Bloomy_Sunday/: CMakeLists.txt  README.md  meson.build
challenges/Blubber/: CMakeLists.txt
challenges/Board_Game/: CMakeLists.txt  README.md  meson.build
challenges/BudgIT/: CMakeLists.txt  README.md  meson.build
challenges/CGC_Board/: CMakeLists.txt  README.md  meson.build
challenges/CGC_File_System/: CMakeLists.txt  README.md  meson.build
challenges/CGC_Hangman_Game/: CMakeLists.txt  README.md  meson.build
challenges/CGC_Image_Parser/: CMakeLists.txt  README.md  meson.build
challenges/CGC_Planet_Markup_Language_Parser/: CMakeLists.txt  README.md  meson.build
challenges/CGC_Symbol_Viewer_CSV/: CMakeLists.txt  README.md  meson.build
challenges/CGC_Video_Format_Parser_and_Viewer/: CMakeLists.txt  README.md  meson.build
challenges/CLOUDCOMPUTE/: CLOUDCOMPUTE  CLOUDCOMPUTE_patched  CMakeLists.txt  meson.build
challenges/CML/: CMakeLists.txt  README.md  meson.build
challenges/CNMP/: CMakeLists.txt  README.md  meson.build
challenges/COLLIDEOSCOPE/: CMakeLists.txt  README.md  meson.build
challenges/CTTP/: CMakeLists.txt  meson.build
challenges/CableGrind/: CMakeLists.txt  README.md  meson.build
challenges/CableGrindLlama/: CMakeLists.txt  README.md  meson.build
challenges/Carbonate/: CMakeLists.txt  README.md  meson.build
challenges/Casino_Games/: CMakeLists.txt  README.md  meson.build
challenges/Cereal_Mixup__A_Cereal_Vending_Machine_Controller/: CMakeLists.txt  README.md  meson.build
challenges/Character_Statistics/: CMakeLists.txt  README.md  meson.build
challenges/Charter/: CMakeLists.txt  README.md  meson.build
challenges/Checkmate/: CMakeLists.txt  README.md  meson.build
challenges/Childs_Game/: CMakeLists.txt  README.md  meson.build
challenges/Corinth/: CMakeLists.txt  README.md  meson.build
challenges/Cromulence_All_Service/: CMakeLists.txt  README.md  meson.build
challenges/DFARS_Sample_Service/: CMakeLists.txt  README.md  meson.build
challenges/Diary_Parser/: CMakeLists.txt  README.md  meson.build
challenges/Differ/: CMakeLists.txt  README.md  meson.build
challenges/Diophantine_Password_Wallet/: CMakeLists.txt  README.md  meson.build
challenges/Dive_Logger/: CMakeLists.txt  README.md  meson.build
challenges/Divelogger2/: CMakeLists.txt  README.md  meson.build
challenges/Document_Rendering_Engine/: CMakeLists.txt  README.md  meson.build
challenges/Dungeon_Master/: CMakeLists.txt  Dungeon_Master  Dungeon_Master_patched  README.md  meson.build
challenges/ECM_TCM_Simulator/: CMakeLists.txt  README.md  meson.build
challenges/Eddy/: CMakeLists.txt  README.md  meson.build
challenges/Email_System_2/: CMakeLists.txt  README.md  meson.build
challenges/Enslavednode_chat/: CMakeLists.txt  README.md  meson.build
challenges/Estadio/: CMakeLists.txt  README.md  meson.build
challenges/EternalPass/: CMakeLists.txt  README.md  meson.build
challenges/FASTLANE/: CMakeLists.txt  meson.build
challenges/FISHYXML/: CMakeLists.txt  meson.build
challenges/FSK_BBS/: CMakeLists.txt  meson.build
challenges/FSK_Messaging_Service/: CMakeLists.txt  README.md  meson.build
challenges/FUN/: CMakeLists.txt  meson.build
challenges/FablesReport/: CMakeLists.txt  README.md  meson.build
challenges/FaceMag/: CMakeLists.txt  README.md  meson.build
challenges/Facilities_Access_Control_System/: CMakeLists.txt  README.md  meson.build
challenges/FailAV/: CMakeLists.txt  README.md  meson.build
challenges/FileSys/: CMakeLists.txt  README.md  meson.build
challenges/Filesystem_Command_Shell/: CMakeLists.txt  meson.build
challenges/Finicky_File_Folder/: CMakeLists.txt  README.md  meson.build
challenges/Flash_File_System/: CMakeLists.txt  README.md  meson.build
challenges/Flight_Routes/: CMakeLists.txt  meson.build
challenges/Fortress/: CMakeLists.txt  README.md  meson.build
challenges/GPS_Tracker/: CMakeLists.txt  README.md  meson.build
challenges/GREYMATTER/: CMakeLists.txt  meson.build
challenges/Game_Night/: CMakeLists.txt  README.md  meson.build
challenges/Glue/: CMakeLists.txt  meson.build
challenges/GreatView/: CMakeLists.txt  meson.build
challenges/Gridder/: CMakeLists.txt  README.md  meson.build
challenges/Griswold/: CMakeLists.txt  Griswold  Griswold_patched  meson.build
challenges/Grit/: CMakeLists.txt  README.md  meson.build
challenges/H20FlowInc/: CMakeLists.txt  meson.build
challenges/HIGHCOO/: CMakeLists.txt  README.md  meson.build
challenges/HackMan/: CMakeLists.txt  README.md  meson.build
challenges/Headscratch/: CMakeLists.txt  README.md  meson.build
challenges/HeartThrob/: CMakeLists.txt  meson.build
challenges/HighFrequencyTradingAlgo/: CMakeLists.txt  meson.build
challenges/Hug_Game/: CMakeLists.txt  README.md  meson.build
challenges/INSULATR/: CMakeLists.txt  meson.build
challenges/Image_Compressor/: CMakeLists.txt  README.md  meson.build
challenges/KKVS/: CMakeLists.txt
challenges/KTY_Pretty_Printer/: CMakeLists.txt  meson.build
challenges/Kaprica_Go/: CMakeLists.txt  README.md  meson.build
challenges/Kaprica_Script_Interpreter/: CMakeLists.txt  meson.build
challenges/LMS/: CMakeLists.txt  (+1 more)
lib/: meson.build
polls/: generate-polls  meson.build
test/: meson.build
(+1826 files in other folders)
