option(
    'disabled',
    type: 'array',
    choices: [
        '3D_Image_Toolkit',
        'Accel',
        'A_Game_of_Chance',
        'AIS-Lite',
        'anagram_game',
        'ASCII_Content_Server',
        'ASL6parse',
        'Audio_Visualizer',
        'Azurad',
        'Barcoder',
        'basic_emulator',
        'basic_messaging',
        'BIRC',
        'BitBlaster',
        'Bloomy_Sunday',
        'Blubber',
        'Board_Game',
        'BudgIT',
        'CableGrind',
        'CableGrindLlama',
        'Carbonate',
        'Casino_Games',
        'Cereal_Mixup__A_Cereal_Vending_Machine_Controller',
        'CGC_Board',
        'CGC_File_System',
        'CGC_Hangman_Game',
        'CGC_Image_Parser',
        'CGC_Planet_Markup_Language_Parser',
        'CGC_Symbol_Viewer_CSV',
        'CGC_Video_Format_Parser_and_Viewer',
        'Character_Statistics',
        'Charter',
        'Checkmate',
        'chess_mimic',
        'Childs_Game',
        'CLOUDCOMPUTE',
        'CML',
        'CNMP',
        'COLLIDEOSCOPE',
        'commerce_webscale',
        'Corinth',
        'cotton_swab_arithmetic',
        'Cromulence_All_Service',
        'CTTP',
        'cyber_blogger',
        'DFARS_Sample_Service',
        'Diary_Parser',
        'Differ',
        'Diophantine_Password_Wallet',
        'Dive_Logger',
        'Divelogger2',
        'Document_Rendering_Engine',
        'Dungeon_Master',
        'ECM_TCM_Simulator',
        'Eddy',
        'electronictrading',
        'Email_System_2',
        'Enslavednode_chat',
        'Estadio',
        'EternalPass',
        'FablesReport',
        'FaceMag',
        'Facilities_Access_Control_System',
        'FailAV',
        'FASTLANE',
        'FileSys',
        'Filesystem_Command_Shell',
        'Finicky_File_Folder',
        'FISHYXML',
        'Flash_File_System',
        'Flight_Routes',
        'Fortress',
        'FSK_BBS',
        'FSK_Messaging_Service',
        'FUN',
        'Game_Night',
        'Glue',
        'GPS_Tracker',
        'GreatView',
        'greeter',
        'GREYMATTER',
        'Gridder',
        'Griswold',
        'Grit',
        'H20FlowInc',
        'HackMan',
        'hawaii_sets',
        'Headscratch',
        'HeartThrob',
        'HIGHCOO',
        'HighFrequencyTradingAlgo',
        'Hug_Game',
        'humaninterface',
        'Image_Compressor',
        'INSULATR',
        'Kaprica_Go',
        'Kaprica_Script_Interpreter',
        'KKVS',
        'KTY_Pretty_Printer',
        'LAN_Simulator',
        'Lazybox',
        'LazyCalc',
        'LMS',
        'Loud_Square_Instant_Messaging_Protocol_LSIMP',
        'LulzChat',
        'Matchmaker',
        'Material_Temperature_Simulation',
        'Mathematical_Solver',
        'matrices_for_sale',
        'Matrix_Math_Calculator',
        'Message_Service',
        'Messaging',
        'middleout',
        'middleware_handshake',
        'Mixology',
        'Modern_Family_Tree',
        'Monster_Game',
        'Mount_Filemore',
        'Movie_Rental_Service',
        'Movie_Rental_Service_Redux',
        'Multi_Arena_Pursuit_Simulator',
        'Multicast_Chat_Server',
        'Multipass',
        'Multipass2',
        'Multipass3',
        'Multi_User_Calendar',
        'Music_Store_Client',
        'NarfAgainShell',
        'NarfRPN',
        'netstorage',
        'Network_File_System',
        'Network_File_System_v3',
        'Network_Queuing_Simulator',
        'Neural_House',
        'NoHiC',
        'No_Paper._Not_Ever._NOPE',
        'One_Amp',
        'One_Vote',
        'online_job_application',
        'online_job_application2',
        'On_Sale',
        'Order_Up',
        'OTPSim',
        'OUTLAW',
        'OUTLAW_3',
        'Overflow_Parking',
        'Pac_for_Edges',
        'Packet_Analyzer',
        'Packet_Receiver',
        'Palindrome',
        'Palindrome2',
        'Parking_Permit_Management_System_PPMS',
        'Particle_Simulator',
        'Pattern_Finder',
        'payroll',
        'PCM_Message_decoder',
        'Personal_Fitness_Manager',
        'Pipelined',
        'pizza_ordering_system',
        'PKK_Steganography',
        'Printer',
        'PRU',
        'PTaaS',
        'QuadtreeConways',
        'Query_Calculator',
        'QUIETSQUARE',
        'RAM_based_filesystem',
        'reallystream',
        'Recipe_and_Pantry_Manager',
        'Recipe_Database',
        'REDPILL',
        'Rejistar',
        'REMATCH_1--Hat_Trick--Morris_Worm',
        'REMATCH_2--Mail_Server--Crackaddr',
        'REMATCH_3--Address_Resolution_Service--SQL_Slammer',
        'REMATCH_4--CGCRPC_Server--MS08-067',
        'REMATCH_5--File_Explorer--LNK_Bug',
        'REMATCH_6--Secure_Server--Heartbleed',
        'Resort_Modeller',
        'root64_and_parcour',
        'router_simulator',
        'RRPN',
        'Sad_Face_Template_Engine_SFTE',
        'Sample_Shipgame',
        'SAuth',
        'Scrum_Database',
        'SCUBA_Dive_Logging',
        'Secure_Compression',
        'Sensr',
        'SFTSCBSISS',
        'Shipgame',
        'Shortest_Path_Tree_Calculator',
        'ShoutCTF',
        'SIGSEGV',
        'simple_integer_calculator',
        'simplenote',
        'simpleOCR',
        'Simple_Stack_Machine',
        'Single-Sign-On',
        'SLUR_reference_implementation',
        'Snail_Mail',
        'SOLFEDGE',
        'Sorter',
        'Space_Attackers',
        'SPIFFS',
        'Square_Rabbit',
        'stack_vm',
        'Stock_Exchange_Simulator',
        'stream_vm',
        'stream_vm2',
        'Street_map_service',
        'String_Info_Calculator',
        'String_Storage_and_Retrieval',
        'TAINTEDLOVE',
        'Tennis_Ball_Motion_Calculator',
        'Terrible_Ticket_Tracker',
        'TextSearch',
        'TFTTP',
        'The_Longest_Road',
        'Thermal_Controller_v2',
        'Thermal_Controller_v3',
        'TIACA',
        'Tick-A-Tack',
        'tribute',
        'TVS',
        'university_enrollment',
        'User_Manager',
        'UTF-late',
        'ValveChecks',
        'Vector_Graphics_2',
        'Vector_Graphics_Format',
        'Venture_Calculator',
        'vFilter',
        'Virtual_Machine',
        'virtual_pet',
        'Water_Treatment_Facility_Simulator',
        'WhackJack',
        'WordCompletion',
        'XStore',
        'yolodex',
    ],
    value: [
        # Disabled due to poller errors
        '3D_Image_Toolkit',
        'Azurad',
        'Estadio',
        'Image_Compressor',
        'Lazybox',
        'Material_Temperature_Simulation',
        'Network_File_System',
        'Network_Queuing_Simulator',
        'PTaaS',
        'REMATCH_2--Mail_Server--Crackaddr',
        'RRPN',
        'Recipe_and_Pantry_Manager',
        'payroll',
        # Disabled due to build errors
        'Accel',
        'A_Game_of_Chance',
        'BIRC',
        'Blubber',
        'Carbonate',
        'CGC_Board',
        'CGC_Image_Parser',
        'Charter',
        'CLOUDCOMPUTE',
        'CML',
        'commerce_webscale',
        'Corinth',
        'Dungeon_Master',
        'Enslavednode_chat',
        'EternalPass',
        'FaceMag',
        'FASTLANE',
        'FUN',
        'Griswold',
        'Kaprica_Script_Interpreter',
        'KKVS',
        'LAN_Simulator',
        'Lazybox',
        'LulzChat',
        'Messaging',
        'middleout',
        'Mixology',
        'Multicast_Chat_Server',
        'Multipass',
        'Multipass2',
        'Multipass3',
        'netstorage',
        'NoHiC',
        'On_Sale',
        'Order_Up',
        'OUTLAW',
        'OUTLAW_3',
        'Pipelined',
        'Query_Calculator',
        'RAM_based_filesystem',
        'reallystream',
        'REDPILL',
        'Rejistar',
        'REMATCH_1--Hat_Trick--Morris_Worm',
        'REMATCH_4--CGCRPC_Server--MS08-067',
        'Shipgame',
        'Single-Sign-On',
        'Stock_Exchange_Simulator',
        'TextSearch',
        'TFTTP',
        'The_Longest_Road',
        'tribute',
        'university_enrollment',
        'virtual_pet',
        'Water_Treatment_Facility_Simulator',
    ],
    description: 'A list of disabled challenges, ex: -Ddisabled=[\'vFilter\', \'WhackJack\']. Takes precedence over -Ddisabled.',
)

option(
    'enabled',
    type: 'array',
    choices: [
        '3D_Image_Toolkit',
        'Accel',
        'A_Game_of_Chance',
        'AIS-Lite',
        'anagram_game',
        'ASCII_Content_Server',
        'ASL6parse',
        'Audio_Visualizer',
        'Azurad',
        'Barcoder',
        'basic_emulator',
        'basic_messaging',
        'BIRC',
        'BitBlaster',
        'Bloomy_Sunday',
        'Blubber',
        'Board_Game',
        'BudgIT',
        'CableGrind',
        'CableGrindLlama',
        'Carbonate',
        'Casino_Games',
        'Cereal_Mixup__A_Cereal_Vending_Machine_Controller',
        'CGC_Board',
        'CGC_File_System',
        'CGC_Hangman_Game',
        'CGC_Image_Parser',
        'CGC_Planet_Markup_Language_Parser',
        'CGC_Symbol_Viewer_CSV',
        'CGC_Video_Format_Parser_and_Viewer',
        'Character_Statistics',
        'Charter',
        'Checkmate',
        'chess_mimic',
        'Childs_Game',
        'CLOUDCOMPUTE',
        'CML',
        'CNMP',
        'COLLIDEOSCOPE',
        'commerce_webscale',
        'Corinth',
        'cotton_swab_arithmetic',
        'Cromulence_All_Service',
        'CTTP',
        'cyber_blogger',
        'DFARS_Sample_Service',
        'Diary_Parser',
        'Differ',
        'Diophantine_Password_Wallet',
        'Dive_Logger',
        'Divelogger2',
        'Document_Rendering_Engine',
        'Dungeon_Master',
        'ECM_TCM_Simulator',
        'Eddy',
        'electronictrading',
        'Email_System_2',
        'Enslavednode_chat',
        'Estadio',
        'EternalPass',
        'FablesReport',
        'FaceMag',
        'Facilities_Access_Control_System',
        'FailAV',
        'FASTLANE',
        'FileSys',
        'Filesystem_Command_Shell',
        'Finicky_File_Folder',
        'FISHYXML',
        'Flash_File_System',
        'Flight_Routes',
        'Fortress',
        'FSK_BBS',
        'FSK_Messaging_Service',
        'FUN',
        'Game_Night',
        'Glue',
        'GPS_Tracker',
        'GreatView',
        'greeter',
        'GREYMATTER',
        'Gridder',
        'Griswold',
        'Grit',
        'H20FlowInc',
        'HackMan',
        'hawaii_sets',
        'Headscratch',
        'HeartThrob',
        'HIGHCOO',
        'HighFrequencyTradingAlgo',
        'Hug_Game',
        'humaninterface',
        'Image_Compressor',
        'INSULATR',
        'Kaprica_Go',
        'Kaprica_Script_Interpreter',
        'KKVS',
        'KTY_Pretty_Printer',
        'LAN_Simulator',
        'Lazybox',
        'LazyCalc',
        'LMS',
        'Loud_Square_Instant_Messaging_Protocol_LSIMP',
        'LulzChat',
        'Matchmaker',
        'Material_Temperature_Simulation',
        'Mathematical_Solver',
        'matrices_for_sale',
        'Matrix_Math_Calculator',
        'Message_Service',
        'Messaging',
        'middleout',
        'middleware_handshake',
        'Mixology',
        'Modern_Family_Tree',
        'Monster_Game',
        'Mount_Filemore',
        'Movie_Rental_Service',
        'Movie_Rental_Service_Redux',
        'Multi_Arena_Pursuit_Simulator',
        'Multicast_Chat_Server',
        'Multipass',
        'Multipass2',
        'Multipass3',
        'Multi_User_Calendar',
        'Music_Store_Client',
        'NarfAgainShell',
        'NarfRPN',
        'netstorage',
        'Network_File_System',
        'Network_File_System_v3',
        'Network_Queuing_Simulator',
        'Neural_House',
        'NoHiC',
        'No_Paper._Not_Ever._NOPE',
        'One_Amp',
        'One_Vote',
        'online_job_application',
        'online_job_application2',
        'On_Sale',
        'Order_Up',
        'OTPSim',
        'OUTLAW',
        'OUTLAW_3',
        'Overflow_Parking',
        'Pac_for_Edges',
        'Packet_Analyzer',
        'Packet_Receiver',
        'Palindrome',
        'Palindrome2',
        'Parking_Permit_Management_System_PPMS',
        'Particle_Simulator',
        'Pattern_Finder',
        'payroll',
        'PCM_Message_decoder',
        'Personal_Fitness_Manager',
        'Pipelined',
        'pizza_ordering_system',
        'PKK_Steganography',
        'Printer',
        'PRU',
        'PTaaS',
        'QuadtreeConways',
        'Query_Calculator',
        'QUIETSQUARE',
        'RAM_based_filesystem',
        'reallystream',
        'Recipe_and_Pantry_Manager',
        'Recipe_Database',
        'REDPILL',
        'Rejistar',
        'REMATCH_1--Hat_Trick--Morris_Worm',
        'REMATCH_2--Mail_Server--Crackaddr',
        'REMATCH_3--Address_Resolution_Service--SQL_Slammer',
        'REMATCH_4--CGCRPC_Server--MS08-067',
        'REMATCH_5--File_Explorer--LNK_Bug',
        'REMATCH_6--Secure_Server--Heartbleed',
        'Resort_Modeller',
        'root64_and_parcour',
        'router_simulator',
        'RRPN',
        'Sad_Face_Template_Engine_SFTE',
        'Sample_Shipgame',
        'SAuth',
        'Scrum_Database',
        'SCUBA_Dive_Logging',
        'Secure_Compression',
        'Sensr',
        'SFTSCBSISS',
        'Shipgame',
        'Shortest_Path_Tree_Calculator',
        'ShoutCTF',
        'SIGSEGV',
        'simple_integer_calculator',
        'simplenote',
        'simpleOCR',
        'Simple_Stack_Machine',
        'Single-Sign-On',
        'SLUR_reference_implementation',
        'Snail_Mail',
        'SOLFEDGE',
        'Sorter',
        'Space_Attackers',
        'SPIFFS',
        'Square_Rabbit',
        'stack_vm',
        'Stock_Exchange_Simulator',
        'stream_vm',
        'stream_vm2',
        'Street_map_service',
        'String_Info_Calculator',
        'String_Storage_and_Retrieval',
        'TAINTEDLOVE',
        'Tennis_Ball_Motion_Calculator',
        'Terrible_Ticket_Tracker',
        'TextSearch',
        'TFTTP',
        'The_Longest_Road',
        'Thermal_Controller_v2',
        'Thermal_Controller_v3',
        'TIACA',
        'Tick-A-Tack',
        'tribute',
        'TVS',
        'university_enrollment',
        'User_Manager',
        'UTF-late',
        'ValveChecks',
        'Vector_Graphics_2',
        'Vector_Graphics_Format',
        'Venture_Calculator',
        'vFilter',
        'Virtual_Machine',
        'virtual_pet',
        'Water_Treatment_Facility_Simulator',
        'WhackJack',
        'WordCompletion',
        'XStore',
        'yolodex',
    ],
    value: [
        '3D_Image_Toolkit',
        'Accel',
        'A_Game_of_Chance',
        'AIS-Lite',
        'anagram_game',
        'ASCII_Content_Server',
        'ASL6parse',
        'Audio_Visualizer',
        'Azurad',
        'Barcoder',
        'basic_emulator',
        'basic_messaging',
        'BIRC',
        'BitBlaster',
        'Bloomy_Sunday',
        'Blubber',
        'Board_Game',
        'BudgIT',
        'CableGrind',
        'CableGrindLlama',
        'Carbonate',
        'Casino_Games',
        'Cereal_Mixup__A_Cereal_Vending_Machine_Controller',
        'CGC_Board',
        'CGC_File_System',
        'CGC_Hangman_Game',
        'CGC_Image_Parser',
        'CGC_Planet_Markup_Language_Parser',
        'CGC_Symbol_Viewer_CSV',
        'CGC_Video_Format_Parser_and_Viewer',
        'Character_Statistics',
        'Charter',
        'Checkmate',
        'chess_mimic',
        'Childs_Game',
        'CLOUDCOMPUTE',
        'CML',
        'CNMP',
        'COLLIDEOSCOPE',
        'commerce_webscale',
        'Corinth',
        'cotton_swab_arithmetic',
        'Cromulence_All_Service',
        'CTTP',
        'cyber_blogger',
        'DFARS_Sample_Service',
        'Diary_Parser',
        'Differ',
        'Diophantine_Password_Wallet',
        'Dive_Logger',
        'Divelogger2',
        'Document_Rendering_Engine',
        'Dungeon_Master',
        'ECM_TCM_Simulator',
        'Eddy',
        'electronictrading',
        'Email_System_2',
        'Enslavednode_chat',
        'Estadio',
        'EternalPass',
        'FablesReport',
        'FaceMag',
        'Facilities_Access_Control_System',
        'FailAV',
        'FASTLANE',
        'FileSys',
        'Filesystem_Command_Shell',
        'Finicky_File_Folder',
        'FISHYXML',
        'Flash_File_System',
        'Flight_Routes',
        'Fortress',
        'FSK_BBS',
        'FSK_Messaging_Service',
        'FUN',
        'Game_Night',
        'Glue',
        'GPS_Tracker',
        'GreatView',
        'greeter',
        'GREYMATTER',
        'Gridder',
        'Griswold',
        'Grit',
        'H20FlowInc',
        'HackMan',
        'hawaii_sets',
        'Headscratch',
        'HeartThrob',
        'HIGHCOO',
        'HighFrequencyTradingAlgo',
        'Hug_Game',
        'humaninterface',
        'Image_Compressor',
        'INSULATR',
        'Kaprica_Go',
        'Kaprica_Script_Interpreter',
        'KKVS',
        'KTY_Pretty_Printer',
        'LAN_Simulator',
        'Lazybox',
        'LazyCalc',
        'LMS',
        'Loud_Square_Instant_Messaging_Protocol_LSIMP',
        'LulzChat',
        'Matchmaker',
        'Material_Temperature_Simulation',
        'Mathematical_Solver',
        'matrices_for_sale',
        'Matrix_Math_Calculator',
        'Message_Service',
        'Messaging',
        'middleout',
        'middleware_handshake',
        'Mixology',
        'Modern_Family_Tree',
        'Monster_Game',
        'Mount_Filemore',
        'Movie_Rental_Service',
        'Movie_Rental_Service_Redux',
        'Multi_Arena_Pursuit_Simulator',
        'Multicast_Chat_Server',
        'Multipass',
        'Multipass2',
        'Multipass3',
        'Multi_User_Calendar',
        'Music_Store_Client',
        'NarfAgainShell',
        'NarfRPN',
        'netstorage',
        'Network_File_System',
        'Network_File_System_v3',
        'Network_Queuing_Simulator',
        'Neural_House',
        'NoHiC',
        'No_Paper._Not_Ever._NOPE',
        'One_Amp',
        'One_Vote',
        'online_job_application',
        'online_job_application2',
        'On_Sale',
        'Order_Up',
        'OTPSim',
        'OUTLAW',
        'OUTLAW_3',
        'Overflow_Parking',
        'Pac_for_Edges',
        'Packet_Analyzer',
        'Packet_Receiver',
        'Palindrome',
        'Palindrome2',
        'Parking_Permit_Management_System_PPMS',
        'Particle_Simulator',
        'Pattern_Finder',
        'payroll',
        'PCM_Message_decoder',
        'Personal_Fitness_Manager',
        'Pipelined',
        'pizza_ordering_system',
        'PKK_Steganography',
        'Printer',
        'PRU',
        'PTaaS',
        'QuadtreeConways',
        'Query_Calculator',
        'QUIETSQUARE',
        'RAM_based_filesystem',
        'reallystream',
        'Recipe_and_Pantry_Manager',
        'Recipe_Database',
        'REDPILL',
        'Rejistar',
        'REMATCH_1--Hat_Trick--Morris_Worm',
        'REMATCH_2--Mail_Server--Crackaddr',
        'REMATCH_3--Address_Resolution_Service--SQL_Slammer',
        'REMATCH_4--CGCRPC_Server--MS08-067',
        'REMATCH_5--File_Explorer--LNK_Bug',
        'REMATCH_6--Secure_Server--Heartbleed',
        'Resort_Modeller',
        'root64_and_parcour',
        'router_simulator',
        'RRPN',
        'Sad_Face_Template_Engine_SFTE',
        'Sample_Shipgame',
        'SAuth',
        'Scrum_Database',
        'SCUBA_Dive_Logging',
        'Secure_Compression',
        'Sensr',
        'SFTSCBSISS',
        'Shipgame',
        'Shortest_Path_Tree_Calculator',
        'ShoutCTF',
        'SIGSEGV',
        'simple_integer_calculator',
        'simplenote',
        'simpleOCR',
        'Simple_Stack_Machine',
        'Single-Sign-On',
        'SLUR_reference_implementation',
        'Snail_Mail',
        'SOLFEDGE',
        'Sorter',
        'Space_Attackers',
        'SPIFFS',
        'Square_Rabbit',
        'stack_vm',
        'Stock_Exchange_Simulator',
        'stream_vm',
        'stream_vm2',
        'Street_map_service',
        'String_Info_Calculator',
        'String_Storage_and_Retrieval',
        'TAINTEDLOVE',
        'Tennis_Ball_Motion_Calculator',
        'Terrible_Ticket_Tracker',
        'TextSearch',
        'TFTTP',
        'The_Longest_Road',
        'Thermal_Controller_v2',
        'Thermal_Controller_v3',
        'TIACA',
        'Tick-A-Tack',
        'tribute',
        'TVS',
        'university_enrollment',
        'User_Manager',
        'UTF-late',
        'ValveChecks',
        'Vector_Graphics_2',
        'Vector_Graphics_Format',
        'Venture_Calculator',
        'vFilter',
        'Virtual_Machine',
        'virtual_pet',
        'Water_Treatment_Facility_Simulator',
        'WhackJack',
        'WordCompletion',
        'XStore',
        'yolodex',
    ],
    description: 'A list of enabled challenges, ex: -Denabled=[\'vFilter\', \'WhackJack\'].',
)

option(
    'enable_broken',
    type: 'boolean',
    value: false,
    description: 'Whether broken challenges are enabled. Defaults to true. If this option is not set, broken challenges cannot be enabled.'
)

option(
    'install_path',
    type: 'string',
    value: 'output',
    description: 'Path to install built challenges into. Defaults to the ./output in the project root.'
)

option(
    'no_polls',
    type: 'boolean',
    value: false,
    description: 'Whether to disable poller seed generation. Defaults to YES polls.'
)

option(
    'install_pip_modules',
    type: 'boolean',
    value: false,
    description: 'Whether to automatically install python pip module dependencies. Defaults to NOT automatically install.'
)

option(
    'force_nopie',
    type: 'boolean',
    value: false,
    description: 'Whether to force no-pie on all challenges. This addresses a meson bug filed as issue 10885. Defaults to NOT force no-pie.'
)