subdir('3D_Image_Toolkit')
# subdir('Accel')
# subdir('A_Game_of_Chance')
subdir('AIS-Lite')
subdir('anagram_game')
subdir('ASCII_Content_Server')
subdir('ASL6parse')
subdir('Audio_Visualizer')
subdir('Azurad')
subdir('Barcoder')
subdir('basic_emulator')
subdir('basic_messaging')
# subdir('BIRC')
subdir('BitBlaster')
subdir('Bloomy_Sunday')
# subdir('Blubber')
subdir('Board_Game')
subdir('BudgIT')
subdir('CableGrind')
subdir('CableGrindLlama')
subdir('Carbonate')
subdir('Casino_Games')
subdir('Cereal_Mixup__A_Cereal_Vending_Machine_Controller')
# subdir('CGC_Board')
subdir('CGC_File_System')
subdir('CGC_Hangman_Game')
# subdir('CGC_Image_Parser')
subdir('CGC_Planet_Markup_Language_Parser')
subdir('CGC_Symbol_Viewer_CSV')
subdir('CGC_Video_Format_Parser_and_Viewer')
subdir('Character_Statistics')
subdir('Charter')
subdir('Checkmate')
subdir('chess_mimic')
subdir('Childs_Game')
subdir('CLOUDCOMPUTE')
subdir('CML')
subdir('CNMP')
subdir('COLLIDEOSCOPE')
# subdir('commerce_webscale')
subdir('Corinth')
subdir('cotton_swab_arithmetic')
subdir('Cromulence_All_Service')
subdir('CTTP')
subdir('cyber_blogger')
subdir('DFARS_Sample_Service')
subdir('Diary_Parser')
subdir('Differ')
subdir('Diophantine_Password_Wallet')
subdir('Dive_Logger')
subdir('Divelogger2')
subdir('Document_Rendering_Engine')
subdir('Dungeon_Master')
subdir('ECM_TCM_Simulator')
subdir('Eddy')
subdir('electronictrading')
subdir('Email_System_2')
# subdir('Enslavednode_chat')
subdir('Estadio')
# subdir('EternalPass')
subdir('FablesReport')
subdir('FaceMag')
subdir('Facilities_Access_Control_System')
subdir('FailAV')
# subdir('FASTLANE')
subdir('FileSys')
subdir('Filesystem_Command_Shell')
subdir('Finicky_File_Folder')
subdir('FISHYXML')
subdir('Flash_File_System')
subdir('Flight_Routes')
subdir('Fortress')
subdir('FSK_BBS')
subdir('FSK_Messaging_Service')
# subdir('FUN')
subdir('Game_Night')
subdir('Glue')
subdir('GPS_Tracker')
subdir('GreatView')
subdir('greeter')
subdir('GREYMATTER')
subdir('Gridder')
subdir('Griswold')
subdir('Grit')
subdir('H20FlowInc')
subdir('HackMan')
subdir('hawaii_sets')
subdir('Headscratch')
subdir('HeartThrob')
subdir('HIGHCOO')
subdir('HighFrequencyTradingAlgo')
subdir('Hug_Game')
subdir('humaninterface')
subdir('Image_Compressor')
subdir('INSULATR')
subdir('Kaprica_Go')
# subdir('Kaprica_Script_Interpreter')
# subdir('KKVS')
subdir('KTY_Pretty_Printer')
# subdir('LAN_Simulator')
# subdir('Lazybox')
subdir('LazyCalc')
subdir('LMS')
subdir('Loud_Square_Instant_Messaging_Protocol_LSIMP')
# subdir('LulzChat')
subdir('Matchmaker')
subdir('Material_Temperature_Simulation')
subdir('Mathematical_Solver')
subdir('matrices_for_sale')
subdir('Matrix_Math_Calculator')
subdir('Message_Service')
# subdir('Messaging')
subdir('middleout')
subdir('middleware_handshake')
subdir('Mixology')
subdir('Modern_Family_Tree')
subdir('Monster_Game')
subdir('Mount_Filemore')
subdir('Movie_Rental_Service')
subdir('Movie_Rental_Service_Redux')
subdir('Multi_Arena_Pursuit_Simulator')
subdir('Multicast_Chat_Server')
subdir('Multipass')
subdir('Multipass2')
subdir('Multipass3')
subdir('Multi_User_Calendar')
subdir('Music_Store_Client')
subdir('NarfAgainShell')
subdir('NarfRPN')
# subdir('netstorage')
subdir('Network_File_System')
subdir('Network_File_System_v3')
subdir('Network_Queuing_Simulator')
subdir('Neural_House')
subdir('NoHiC')
subdir('No_Paper._Not_Ever._NOPE')
subdir('One_Amp')
subdir('One_Vote')
subdir('online_job_application')
subdir('online_job_application2')
# subdir('On_Sale')
# subdir('Order_Up')
subdir('OTPSim')
# subdir('OUTLAW')
# subdir('OUTLAW_3')
subdir('Overflow_Parking')
subdir('Pac_for_Edges')
subdir('Packet_Analyzer')
subdir('Packet_Receiver')
subdir('Palindrome')
subdir('Palindrome2')
subdir('Parking_Permit_Management_System_PPMS')
subdir('Particle_Simulator')
subdir('Pattern_Finder')
subdir('payroll')
subdir('PCM_Message_decoder')
subdir('Personal_Fitness_Manager')
# subdir('Pipelined')
subdir('pizza_ordering_system')
subdir('PKK_Steganography')
subdir('Printer')
subdir('PRU')
subdir('PTaaS')
subdir('QuadtreeConways')
subdir('Query_Calculator')
subdir('QUIETSQUARE')
# subdir('RAM_based_filesystem')
# subdir('reallystream')
subdir('Recipe_and_Pantry_Manager')
subdir('Recipe_Database')
# subdir('REDPILL')
# subdir('Rejistar')
# subdir('REMATCH_1--Hat_Trick--Morris_Worm')
subdir('REMATCH_2--Mail_Server--Crackaddr')
subdir('REMATCH_3--Address_Resolution_Service--SQL_Slammer')
# subdir('REMATCH_4--CGCRPC_Server--MS08-067')
subdir('REMATCH_5--File_Explorer--LNK_Bug')
subdir('REMATCH_6--Secure_Server--Heartbleed')
subdir('Resort_Modeller')
subdir('root64_and_parcour')
subdir('router_simulator')
subdir('RRPN')
subdir('Sad_Face_Template_Engine_SFTE')
subdir('Sample_Shipgame')
subdir('SAuth')
subdir('Scrum_Database')
subdir('SCUBA_Dive_Logging')
subdir('Secure_Compression')
subdir('Sensr')
subdir('SFTSCBSISS')
# subdir('Shipgame')
subdir('Shortest_Path_Tree_Calculator')
subdir('ShoutCTF')
subdir('SIGSEGV')
subdir('simple_integer_calculator')
subdir('simplenote')
subdir('simpleOCR')
subdir('Simple_Stack_Machine')
subdir('Single-Sign-On')
subdir('SLUR_reference_implementation')
subdir('Snail_Mail')
subdir('SOLFEDGE')
subdir('Sorter')
subdir('Space_Attackers')
subdir('SPIFFS')
subdir('Square_Rabbit')
subdir('stack_vm')
# subdir('Stock_Exchange_Simulator')
subdir('stream_vm')
subdir('stream_vm2')
subdir('Street_map_service')
subdir('String_Info_Calculator')
subdir('String_Storage_and_Retrieval')
subdir('TAINTEDLOVE')
subdir('Tennis_Ball_Motion_Calculator')
subdir('Terrible_Ticket_Tracker')
# subdir('TextSearch')
# subdir('TFTTP')
# subdir('The_Longest_Road')
subdir('Thermal_Controller_v2')
subdir('Thermal_Controller_v3')
subdir('TIACA')
subdir('Tick-A-Tack')
# subdir('tribute')
subdir('TVS')
subdir('university_enrollment')
subdir('User_Manager')
subdir('UTF-late')
subdir('ValveChecks')
subdir('Vector_Graphics_2')
subdir('Vector_Graphics_Format')
subdir('Venture_Calculator')
subdir('vFilter')
subdir('Virtual_Machine')
# subdir('virtual_pet')
subdir('Water_Treatment_Facility_Simulator')
subdir('WhackJack')
subdir('WordCompletion')
subdir('XStore')
subdir('yolodex')